[package]
name = "compdb"
version = "0.1.3"
edition = "2024"
description = "A blazingly fast compilation database manipulation tool - 135x faster than Python compdb"
license = "MIT"
authors = ["patwie <mail@patwie.com>"]
repository = "https://github.com/patwie/compdb-rs"
homepage = "https://github.com/patwie/compdb-rs"
keywords = ["compilation", "database", "compdb", "clang", "cpp"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "compdb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
rayon = "1.10"
dashmap = "5.5"
crossbeam-deque = "0.8"
rustc-hash = "2.1.1"
